--- a/Backend.SpringBoot/Dockerfile
+++ b/Backend.SpringBoot/Dockerfile
@@ -1,22 +1,13 @@
-
+# Build stage
 FROM maven:3.9.5-eclipse-temurin-21 AS build
 WORKDIR /app
 COPY pom.xml .
 COPY src ./src
 RUN mvn -B -DskipTests package
 
-
+# Run stage
 FROM eclipse-temurin:21-jre
 WORKDIR /app
-
-
 COPY --from=build /app/target/*.jar app.jar
-
-
-COPY wait-for-postgres.sh .
-RUN chmod +x wait-for-postgres.sh
-
 EXPOSE 8080
-
-
-CMD ["./wait-for-postgres.sh", "java", "-jar", "app.jar"]
+CMD ["java", "-jar", "app.jar"]
