--- a/Backend.SpringBoot/src/main/resources/application.properties
+++ b/Backend.SpringBoot/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 spring.application.name=Backend.SpringBoot
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/Patient
-spring.datasource.username=postgres
-spring.datasource.password=ashish@123
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-
-model.api.url=http://model-api:5000/predict
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
+model.api.url=https://model-api-3-zbk6.onrender.com
 server.port=${PORT:8080}
