--- a/Backend.SpringBoot/src/main/resources/application.properties
+++ b/Backend.SpringBoot/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=Backend.SpringBoot
 
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
-spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 model.api.url=https://model-api-3-zbk6.onrender.com
 server.port=${PORT:8080}
