--- a/Backend.SpringBoot/src/main/resources/application.properties
+++ b/Backend.SpringBoot/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-model.api.url=https://model-api-3-zbk6.onrender.com
+model.api.url=${MODEL_API_URL}
 server.port=${PORT:8080}
 
